# atcoder_rust

./: Cargo.toml
arc046/: Cargo.toml
arc046/testcases/: a.yml  b.yml  c.yml  d.yml
dp/: Cargo.toml
dpl/: Cargo.toml
dpl/src/: e.rs  main.rs
past201912-open/: Cargo.toml
past201912-open/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml  g.yml  h.yml  i.yml  j.yml  k.yml  l.yml  m.yml  n.yml  o.yml
past202004-open/: Cargo.toml
past202004-open/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml  g.yml  h.yml  i.yml  j.yml  k.yml  l.yml  m.yml  n.yml  o.yml
src/: all_sides.rs
tdpc/: Cargo.toml
