[package]
name = "past202004-open"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
past202004-open-a = { alias = "a", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_a" }
past202004-open-b = { alias = "b", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_b" }
past202004-open-c = { alias = "c", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_c" }
past202004-open-d = { alias = "d", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_d" }
past202004-open-e = { alias = "e", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_e" }
past202004-open-f = { alias = "f", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_f" }
past202004-open-g = { alias = "g", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_g" }
past202004-open-h = { alias = "h", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_h" }
past202004-open-i = { alias = "i", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_i" }
past202004-open-j = { alias = "j", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_j" }
past202004-open-k = { alias = "k", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_k" }
past202004-open-l = { alias = "l", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_l" }
past202004-open-m = { alias = "m", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_m" }
past202004-open-n = { alias = "n", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_n" }
past202004-open-o = { alias = "o", problem = "https://atcoder.jp/contests/past202004-open/tasks/past202004_o" }

[[bin]]
name = "past202004-open-a"
path = "src/bin/a.rs"

[[bin]]
name = "past202004-open-b"
path = "src/bin/b.rs"

[[bin]]
name = "past202004-open-c"
path = "src/bin/c.rs"

[[bin]]
name = "past202004-open-d"
path = "src/bin/d.rs"

[[bin]]
name = "past202004-open-e"
path = "src/bin/e.rs"

[[bin]]
name = "past202004-open-f"
path = "src/bin/f.rs"

[[bin]]
name = "past202004-open-g"
path = "src/bin/g.rs"

[[bin]]
name = "past202004-open-h"
path = "src/bin/h.rs"

[[bin]]
name = "past202004-open-i"
path = "src/bin/i.rs"

[[bin]]
name = "past202004-open-j"
path = "src/bin/j.rs"

[[bin]]
name = "past202004-open-k"
path = "src/bin/k.rs"

[[bin]]
name = "past202004-open-l"
path = "src/bin/l.rs"

[[bin]]
name = "past202004-open-m"
path = "src/bin/m.rs"

[[bin]]
name = "past202004-open-n"
path = "src/bin/n.rs"

[[bin]]
name = "past202004-open-o"
path = "src/bin/o.rs"

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"

[dev-dependencies]
